--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <body>
   <div class="container">
     <nav>
+      <img src="/images/logo.svg" alt="Sneakers website logo">
       <ul>
         <li><a href="#">Collections</a></li>
         <li><a href="#">Men</a></li>
