--- a/index.html
+++ b/index.html
@@ -21,21 +21,28 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
+      <img src="/images/icon-cart.svg" alt="Icon cart navigation bar">
     </nav>
 
-    Sneaker Company
+    <div class="card">
+      <div class="card-img">
+        <img class="card-img-main" src="/images/image-product-1-thumbnail.jpg" alt="Sneaker main image">
+      </div>
+      <div class="card-content">
+        <h2>Sneaker Company</h2>
+        <h1>Fall Limited Edition Sneakers</h1>
 
-    Fall Limited Edition Sneakers
+        <p>These low-profile sneakers are your perfect casual wear companion. Featuring a
+        durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
 
-    These low-profile sneakers are your perfect casual wear companion. Featuring a
-    durable rubber outer sole, they’ll withstand everything the weather can offer.
+        $125.00
+        50%
+        $250.00
 
-    $125.00
-    50%
-    $250.00
-
-    0
-    Add to cart
+        0
+        Add to cart
+      </div>
+    </div>
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
