updatde navbar with avatar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <nav>
-      <img src="/images/logo.svg" alt="Sneakers website logo">
+      <a href="#"><img src="/images/logo.svg" alt="Sneakers website logo"></a>
       <ul>
         <li><a href="#">Collections</a></li>
         <li><a href="#">Men</a></li>
@@ -21,7 +21,8 @@
         <li><a href="#">About</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <img src="/images/icon-cart.svg" alt="Icon cart navigation bar">
+      <img class="icon-cart" src="/images/icon-cart.svg" alt="Icon cart navigation bar">
+      <img class ="avatar"src="/images/image-avatar.png" alt="Avatar profile picture">
     </nav>
 
     <div class="card">
