added semantics html

--- a/index.html
+++ b/index.html
@@ -12,38 +12,42 @@
 </head>
 <body>
   <div class="container">
-    <nav>
-      <a href="#"><img src="/images/logo.svg" alt="Sneakers website logo"></a>
-      <ul>
-        <li><a href="#">Collections</a></li>
-        <li><a href="#">Men</a></li>
-        <li><a href="#">Women</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      <img class="icon-cart" src="/images/icon-cart.svg" alt="Icon cart navigation bar">
-      <img class ="avatar"src="/images/image-avatar.png" alt="Avatar profile picture">
-    </nav>
+    <header>
+      <nav>
+        <a href="#"><img src="/images/logo.svg" alt="Sneakers website logo"></a>
+        <ul>
+          <li><a href="#">Collections</a></li>
+          <li><a href="#">Men</a></li>
+          <li><a href="#">Women</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+        <img class="icon-cart" src="/images/icon-cart.svg" alt="Icon cart navigation bar">
+        <img class ="avatar"src="/images/image-avatar.png" alt="Avatar profile picture">
+      </nav>
+    </header>
 
-    <div class="card">
-      <div class="card-img">
-        <img class="card-img-main" src="/images/image-product-1-thumbnail.jpg" alt="Sneaker main image">
+    <main>
+      <div class="card">
+        <div class="card-img">
+          <img class="card-img-main" src="/images/image-product-1-thumbnail.jpg" alt="Sneaker main image">
+        </div>
+        <div class="card-content">
+          <h2>Sneaker Company</h2>
+          <h1>Fall Limited Edition Sneakers</h1>
+
+          <p>These low-profile sneakers are your perfect casual wear companion. Featuring a
+          durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
+
+          $125.00
+          50%
+          $250.00
+
+          0
+          Add to cart
+        </div>
       </div>
-      <div class="card-content">
-        <h2>Sneaker Company</h2>
-        <h1>Fall Limited Edition Sneakers</h1>
-
-        <p>These low-profile sneakers are your perfect casual wear companion. Featuring a
-        durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-
-        $125.00
-        50%
-        $250.00
-
-        0
-        Add to cart
-      </div>
-    </div>
+    </main>
 
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
