--- a/index.html
+++ b/index.html
@@ -14,16 +14,20 @@
   <div class="container">
     <header>
       <nav>
-        <a href="#"><img src="/images/logo.svg" alt="Sneakers website logo"></a>
-        <ul>
-          <li><a href="#">Collections</a></li>
-          <li><a href="#">Men</a></li>
-          <li><a href="#">Women</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-        <img class="icon-cart" src="/images/icon-cart.svg" alt="Icon cart navigation bar">
-        <img class ="avatar"src="/images/image-avatar.png" alt="Avatar profile picture">
+        <div class="nav-left">
+          <a href="#"><img src="/images/logo.svg" alt="Sneakers website logo"></a>
+          <ul>
+            <li><a href="#">Collections</a></li>
+            <li><a href="#">Men</a></li>
+            <li><a href="#">Women</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+        <div class="nav-right">
+          <img class="icon-cart" src="/images/icon-cart.svg" alt="Icon cart navigation bar">
+          <img class ="avatar"src="/images/image-avatar.png" alt="Avatar profile picture">
+        </div>
       </nav>
     </header>
 
