Added thumbnails images

--- a/index.html
+++ b/index.html
@@ -34,7 +34,13 @@
     <main>
       <div class="card">
         <div class="card-img">
-          <img class="card-img-main" src="/images/image-product-1-thumbnail.jpg" alt="Sneaker main image">
+          <img class="card-img-main" src="/images/image-product-1.jpg" alt="Sneaker main image">
+          <div class="card-img-thumbnail-container">
+            <img src="/images/image-product-1-thumbnail.jpg" alt="Sneaker image thumbnail 1">
+            <img src="/images/image-product-2-thumbnail.jpg" alt="Sneaker image thumbnail 2">
+            <img src="/images/image-product-3-thumbnail.jpg" alt="Sneaker image thumbnail 3">
+            <img src="/images/image-product-4-thumbnail.jpg" alt="Sneaker image thumbnail 4">
+          </div>
         </div>
         <div class="card-content">
           <h2>Sneaker Company</h2>
