updated card-price components

--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
           <h2>Sneaker Company</h2>
           <h1>Fall Limited Edition Sneakers</h1>
 
-          <p>These low-profile sneakers are your perfect casual wear companion. Featuring a
+          <p class="card-description">These low-profile sneakers are your perfect casual wear companion. Featuring a
           durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
-
-          $125.00
-          50%
-          $250.00
+          <div class="card-price">
+            <p class="card-discount-price">$125.00</p>
+            <p class="card-discount">50%</p>
+          </div>
+          <p class="card-initial-price">$250.00</p>
 
           0
           Add to cart
