created card-cart div

--- a/index.html
+++ b/index.html
@@ -45,7 +45,6 @@
         <div class="card-content">
           <h2>Sneaker Company</h2>
           <h1>Fall Limited Edition Sneakers</h1>
-
           <p class="card-description">These low-profile sneakers are your perfect casual wear companion. Featuring a
           durable rubber outer sole, they’ll withstand everything the weather can offer.</p>
           <div class="card-price">
@@ -53,9 +52,12 @@
             <p class="card-discount">50%</p>
           </div>
           <p class="card-initial-price">$250.00</p>
+          <div class="card-cart">
+            0
+            Add to cart
+          </div>
 
-          0
-          Add to cart
+
         </div>
       </div>
     </main>
