--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
           <p class="card-initial-price">$250.00</p>
           <div class="card-cart">
             <div class="card-cart-quantity">
-              <img src="/images/icon-minus.svg" alt="Minus icon">
+              <img class="card-cart-minus" src="/images/icon-minus.svg" alt="Minus icon">
               <p>0</p>
-              <img src="/images/icon-plus.svg" alt="Plus icon">
+              <img class="card-cart-plus" src="/images/icon-plus.svg" alt="Plus icon">
             </div>
             <button class="card-cart-add">Add to cart</button>
           </div>
