added css for card-cart-btn-add

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
           <div class="card-cart">
             <div class="card-cart-quantity">
               <img class="card-cart-minus" src="/images/icon-minus.svg" alt="Minus icon">
-              <p>0</p>
+              <span>0</span>
               <img class="card-cart-plus" src="/images/icon-plus.svg" alt="Plus icon">
             </div>
-            <button class="card-cart-add">Add to cart</button>
+            <button class="card-cart-btn-add">
+              <img src="/images/icon-cart.svg" alt="Icon cart add button">
+              Add to cart
+            </button>
           </div>
-
 
         </div>
       </div>
