updated css for card-cart-btn-add

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
               <img class="card-cart-plus" src="/images/icon-plus.svg" alt="Plus icon">
             </div>
             <button class="card-cart-btn-add">
-              <img src="/images/icon-cart.svg" alt="Icon cart add button">
+              <img src="/images/icon-cart-white.svg" alt="Icon cart add button">
               Add to cart
             </button>
           </div>
